# learn_opengl_with_rust

./: .gitignore  Cargo.toml  ReadMe.md
examples/1-getting_started/1_1-hello_window/: main.rs
examples/1-getting_started/1_2-hello_window_clear/: main.rs
examples/1-getting_started/2_1-hello_triangle/: main.rs
examples/1-getting_started/2_2-hello_triangle_indexed/: main.rs
examples/1-getting_started/2_3-hello_triangle_exercise1/: main.rs
examples/1-getting_started/2_4-hello_triangle_exercise2/: main.rs
examples/1-getting_started/2_5-hello_triangle_exercise3/: main.rs
examples/1-getting_started/3_1-shaders_uniform/: main.rs
examples/1-getting_started/3_2-shaders_interpolation/: main.rs
examples/1-getting_started/3_3-shaders_class/: main.rs
examples/1-getting_started/3_4-shaders_exercise1/: shaders_exercise1.md
examples/1-getting_started/3_5-shaders_exercise2/: shaders_exercise2.md
examples/1-getting_started/3_6-shaders_exercise3/: 3_6-shaders_exercise3.md
examples/1-getting_started/4_1-textures/: main.rs
examples/1-getting_started/4_2-textures_combined/: main.rs
examples/1-getting_started/4_3-textures_exercise1/: textures_exercise1.md
examples/1-getting_started/4_4-textures_exercise2/: main.rs
examples/1-getting_started/4_5-textures_exercise3/: 4_5-textures_exercise3.md  main.rs
examples/1-getting_started/4_6-textures_exercise4/: main.rs
examples/1-getting_started/5_1-transformations/: main.rs
examples/1-getting_started/5_2-transformations_exercise1/: transformations_exercise1.md
examples/1-getting_started/5_2-transformations_exercise2/: main.rs  transformations_exercise2.md
examples/1-getting_started/6_1-coordinate_systems/: main.rs
examples/1-getting_started/6_2-coordinate_systems_depth/: main.rs
examples/1-getting_started/6_3-coordinate_systems_multiple/: main.rs
examples/1-getting_started/6_4-coordinate_systems_exercise3/: coordinate_systems_exercise3.md  main.rs
examples/1-getting_started/7_1-camera_circle/: main.rs
examples/1-getting_started/7_2-camera_keyboard_dt/: main.rs
examples/1-getting_started/7_3-camera_mouse_zoom/: main.rs
examples/1-getting_started/7_4-camera_class/: main.rs
examples/1-getting_started/7_5-camera_exercise1/: camera_exercise1.md
examples/1-getting_started/7_6-camera_exercise2/: camera_exercise2.md
examples/2-lighting/1-colors/: main.rs
examples/2-lighting/2_1-basic_lighting_diffuse/: main.rs
examples/2-lighting/2_2-basic_lighting_specular/: main.rs
examples/2-lighting/2_3-basic_lighting_exercise1/: basic_lighting_exercise1.md
examples/2-lighting/2_4-basic_lighting_exercise2/: basic_lighting_exercise2.md  main.rs
examples/2-lighting/2_5-basic_lighting_exercise3/: basic_lighting_exercise3.md  main.rs
examples/2-lighting/3_1-materials/: main.rs
examples/2-lighting/3_2-materials_exercise1/: main.rs
examples/2-lighting/4_1-lighting_maps_diffuse_map/: main.rs
examples/2-lighting/4_2-lighting_maps_specular_map/: main.rs
examples/2-lighting/4_3-lighting_maps_exercise2/: lighting_maps_exercise2.md
examples/2-lighting/4_4-lighting_maps_exercise4/: lighting_maps_exercise4.md  main.rs
examples/2-lighting/5_1-light_casters_directional/: main.rs
examples/2-lighting/5_2-light_casters_point/: main.rs
examples/2-lighting/5_3-light_casters_spot/: main.rs
examples/2-lighting/5_4-light_casters_spot_soft/: main.rs
examples/2-lighting/6-multiple_lights/: main.rs
examples/2-lighting/6-multiple_lights_exercise1/: multiple_lights_exercise1.md
examples/3-model_loading/1-model_loading/: main.rs
examples/4-advanced_opengl/10_1-instancing_quads/: main.rs
examples/4-advanced_opengl/10_2-asteroids/: main.rs
examples/4-advanced_opengl/10_3-asteroids_instanced/: main.rs
examples/4-advanced_opengl/11_1-anti_aliasing_msaa/: main.rs
examples/4-advanced_opengl/11_2-anti_aliasing_offscreen/: main.rs
examples/4-advanced_opengl/1_1-depth_testing/: main.rs
examples/4-advanced_opengl/1_2-depth_testing_view/: main.rs
examples/4-advanced_opengl/2-stencil_testing/: main.rs
examples/4-advanced_opengl/3_1-blending_discard/: main.rs
examples/4-advanced_opengl/3_2-blending_sort/: main.rs
examples/4-advanced_opengl/4-face_culling_exercise1/: face_culling_exercise1.md  main.rs
examples/4-advanced_opengl/5_1-framebuffers/: main.rs
examples/4-advanced_opengl/5_2-framebuffers_exercise1/: 5_2-framebuffers_screen.vert  5_2-framebuffers_screen_blur.frag  5_2-framebuffers_screen_sharpening.frag  main.rs
examples/4-advanced_opengl/6_1-cubemaps_skybox/: main.rs
examples/4-advanced_opengl/6_2-cubemaps_environment_mapping/: main.rs
examples/4-advanced_opengl/8-advanced_glsl_ubo/: main.rs
examples/4-advanced_opengl/9_1-geometry_shader_houses/: main.rs
examples/4-advanced_opengl/9_2-geometry_shader_exploding/: main.rs
examples/4-advanced_opengl/9_3-geometry_shader_normals/: main.rs
examples/5-advanced_lighting/1-advanced_lighting/: main.rs
examples/5-advanced_lighting/2-gamma_correction/: main.rs
examples/5-advanced_lighting/3_1_1-shadow_mapping_depth/: main.rs
examples/5-advanced_lighting/3_1_2-shadow_mapping_base/: main.rs
examples/5-advanced_lighting/3_1_3-shadow_mapping/: 3_1_3-shadow_mapping.frag  main.rs
examples/5-advanced_lighting/3_2_1-point_shadows/: 3_2_1-point_shadows.frag  main.rs
glad-gl/src/: gl.rs
learnopengl_lib/: Cargo.toml  Notes.md
learnopengl_lib/src/: aiscene.rs  camera.rs  lib.rs  macros.rs  mesh.rs  model.rs  shader_m.rs  shader_s.rs
src/: camera.rs  lib.rs  mesh.rs  model.rs  shader.rs  shader_m.rs  shader_s.rs
tests/: mesh_test.rs
