[package]
name = "learn_opengl_with_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#glfw = "0.52.0"
glad-gl = { path = "./glad-gl" }
learnopengl_lib = { path = "./learnopengl_lib" }

[dependencies.glfw]
version = "*"

[[example]]
name = "1_1-hello_window"
path = "examples/1-getting_started/1_1-hello_window/main.rs"

[[example]]
name = "1_2-hello_window_clear"
path = "examples/1-getting_started/1_2-hello_window_clear/main.rs"

[[example]]
name = "2_1-hello_triangle"
path = "examples/1-getting_started/2_1-hello_triangle/main.rs"

[[example]]
name = "2_2-hello_triangle_indexed"
path = "examples/1-getting_started/2_2-hello_triangle_indexed/main.rs"

[[example]]
name = "2_3-hello_triangle_exercise1"
path = "examples/1-getting_started/2_3-hello_triangle_exercise1/main.rs"

[[example]]
name = "2_4-hello_triangle_exercise2"
path = "examples/1-getting_started/2_4-hello_triangle_exercise2/main.rs"

[[example]]
name = "2_5-hello_triangle_exercise3"
path = "examples/1-getting_started/2_5-hello_triangle_exercise3/main.rs"

[[example]]
name = "3_1-shaders_uniform"
path = "examples/1-getting_started/3_1-shaders_uniform/main.rs"

[[example]]
name = "3_2-shaders_interpolation"
path = "examples/1-getting_started/3_2-shaders_interpolation/main.rs"

[[example]]
name = "3_3-shaders_class"
path = "examples/1-getting_started/3_3-shaders_class/main.rs"




