[package]
name = "learn_opengl_with_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#glfw = "0.52.0"
glad-gl = { path = "./glad-gl" }
image = "0.24.7"
learnopengl_lib = { path = "./learnopengl_lib" }

[dependencies.glfw]
version = "*"

[[example]]
name = "1_1-hello_window"
path = "examples/1-getting_started/1_1-hello_window/main.rs"

[[example]]
name = "1_2-hello_window_clear"
path = "examples/1-getting_started/1_2-hello_window_clear/main.rs"

[[example]]
name = "2_1-hello_triangle"
path = "examples/1-getting_started/2_1-hello_triangle/main.rs"

[[example]]
name = "2_2-hello_triangle_indexed"
path = "examples/1-getting_started/2_2-hello_triangle_indexed/main.rs"

[[example]]
name = "2_3-hello_triangle_exercise1"
path = "examples/1-getting_started/2_3-hello_triangle_exercise1/main.rs"

[[example]]
name = "2_4-hello_triangle_exercise2"
path = "examples/1-getting_started/2_4-hello_triangle_exercise2/main.rs"

[[example]]
name = "2_5-hello_triangle_exercise3"
path = "examples/1-getting_started/2_5-hello_triangle_exercise3/main.rs"

[[example]]
name = "3_1-shaders_uniform"
path = "examples/1-getting_started/3_1-shaders_uniform/main.rs"

[[example]]
name = "3_2-shaders_interpolation"
path = "examples/1-getting_started/3_2-shaders_interpolation/main.rs"

[[example]]
name = "3_3-shaders_class"
path = "examples/1-getting_started/3_3-shaders_class/main.rs"

[[example]]
name = "4_1-textures"
path = "examples/1-getting_started/4_1-textures/main.rs"

[[example]]
name = "4_2-textures_combined"
path = "examples/1-getting_started/4_2-textures_combined/main.rs"

#[[example]]
#name = "4_3-textures_exercise1"
#path = "examples/1-getting_started/4_3-textures_exercise1/main.rs"

[[example]]
name = "4_4-textures_exercise2"
path = "examples/1-getting_started/4_4-textures_exercise2/main.rs"

[[example]]
name = "4_5-textures_exercise3"
path = "examples/1-getting_started/4_5-textures_exercise3/main.rs"

[[example]]
name = "4_6-textures_exercise4"
path = "examples/1-getting_started/4_6-textures_exercise4/main.rs"


#[[example]]
#name = "5_1-transformations"
#path = "examples/1-getting_started/5_1-transformations/main.rs"
#
#[[example]]
#name = "5_2-transformations_exercise1"
#path = "examples/1-getting_started/5_2-transformations_exercise1/main.rs"
#
#[[example]]
#name = "5_2-transformations_exercise2"
#path = "examples/1-getting_started/5_2-transformations_exercise2/main.rs"
#
#[[example]]
#name = "6_1-coordinate_systems"
#path = "examples/1-getting_started/6_1-coordinate_systems/main.rs"
#
#[[example]]
#name = "6_2-coordinate_systems_depth"
#path = "examples/1-getting_started/6_2-coordinate_systems_depth/main.rs"
#
#[[example]]
#name = "6_3-coordinate_systems_multiple"
#path = "examples/1-getting_started/6_3-coordinate_systems_multiple/main.rs"
#
#[[example]]
#name = "6_4-coordinate_systems_exercise3"
#path = "examples/1-getting_started/6_4-coordinate_systems_exercise3/main.rs"
#
#[[example]]
#name = "7_1-camera_circle"
#path = "examples/1-getting_started/7_1-camera_circle/main.rs"
#
#[[example]]
#name = "7_2-camera_keyboard_dt"
#path = "examples/1-getting_started/7_2-camera_keyboard_dt/main.rs"
#
#[[example]]
#name = "7_3-camera_mouse_zoom"
#path = "examples/1-getting_started/7_3-camera_mouse_zoom/main.rs"
#
#[[example]]
#name = "7_4-camera_class"
#path = "examples/1-getting_started/7_4-camera_class/main.rs"
#
#[[example]]
#name = "7_5-camera_exercise1"
#path = "examples/1-getting_started/7_5-camera_exercise1/main.rs"
#
#[[example]]
#name = "7_6-camera_exercise2"
#path = "examples/1-getting_started/7_6-camera_exercise2/main.rs"
#

